--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "@babel/eslint-parser": "7.16.5",
     "@babel/plugin-proposal-class-properties": "7.16.7",
     "@babel/preset-env": "7.16.7",
-    "@babel/preset-react": "7.16.7",
+    "@babel/preset-react": "^7.16.7",
     "@tailwindcss/forms": "0.2.1",
     "@tailwindcss/postcss7-compat": "2.0.3",
     "autoprefixer": "10.4.2",
