Revert "minor improvements"
This reverts commit 26f534d8771bb3fa1d6e7f6d8e705f1a56ecb9e2.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,11 @@
   "name": "frontend",
   "version": "1.0.0",
   "description": "frontend for college forum",
+  "main": "index.js",
   "scripts": {
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
-    "dev": "parcel src/pages/index.html",
-    "build": "parcel build src/pages/index.html",
-    "watch": "parcel watch src/pages/index.html",
-    "prod": "parcel dist/index.html"
+    "dev": "parcel src/pages/index.html"
   },
   "author": "Naman Singh",
   "license": "ISC",
