--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,11 @@
   "name": "frontend",
   "version": "1.0.0",
   "description": "frontend for college forum",
-  "main": "index.js",
   "scripts": {
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
-    "dev": "parcel src/pages/index.html"
+    "lint": "eslint \"src/**/**/*.{js,jsx,ts,tsx}\" --quiet",
+    "dev": "parcel src/pages/index.html",
+    "build": "parcel build src/pages/index.html"
   },
   "author": "Naman Singh",
   "license": "ISC",
@@ -16,29 +16,25 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "6.2.1"
-  },
-  "devDependencies": {
-    "@babel/core": "7.16.7",
-    "@babel/eslint-parser": "7.16.5",
-    "@babel/plugin-proposal-class-properties": "7.16.7",
-    "@babel/preset-env": "7.16.7",
-    "@babel/preset-react": "^7.16.7",
-    "@tailwindcss/forms": "0.2.1",
-    "@tailwindcss/postcss7-compat": "2.0.3",
-    "autoprefixer": "10.4.2",
-    "eslint": "8.6.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-plugin-react-hooks": "4.3.0",
-    "parcel": "2.1.1",
-    "postcss": "8.4.5",
-    "prettier": "2.5.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@2.0.3"
+    "react-router-dom": "6.2.1",
+    "tailwind-scrollbar": "^1.3.1"
   },
   "browserslist": [
     "last 2 Chrome versions"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-react": "^7.16.7",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "parcel": "^2.2.0",
+    "tailwindcss": "^3.0.13"
+  }
 }
