--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,11 @@ django~=4.0
 djoser
 django-rest-framework
 django-cors-headers
+psycopg2-binary
 
 djangorestframework~=3.13.1
 
 gunicorn
 asgiref
 pytz
-sqlparse
-whitenoise
-django_heroku
 Pyrebase~=3.0.27
