--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-venv
 *.pyc
 staticfiles
 .env
@@ -30,3 +29,4 @@ staticfiles
 /media/postimages/
 /media/postFiles/
 /static/
+/media/
